1997-11-28  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* iselect.c (coop_next_runnable_thread,
	coop_wait_for_runnable_thread): Disable interrupts so that no
	async is executed before a potential error_revive.
	(scm_internal_select): Disable interrupts during the parts of the
	code which manipulate the sleep queue and the file descriptors.

1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am: Added iselect.c and iselect.h.

	* coop.c (coop_qinit): Initialize fields used by
	scm_internal_select.
	(coop_qget, coop_qget, coop_tmp_queue): Made global.
	(coop_next_runnable_thread): If GUILE_ISELECT enabled, use
	replacement in iselect.c.
	(coop_mutex_lock, coop_condition_variable_wait, coop_abort,
	coop_join): If GUILE_ISELECT enabled, use
	coop_wait_for_runnable_thread instead of
	coop_next_runnable_thread.
	(usleep, sleep): New replacements for system functions if
	GUILE_ISELECT is enabled.

	* coop-threads.h: Declare coop_wait_for_runnable_thread.

	* coop-defs.h (coop_t): Added fields used by scm_internal_select.

	* filesys.c: Added #include "iselect.h".  Moved FD-macros to
	iselect.h.  Implement Scheme level `select' using
	scm_internal_select.  (See NEWS.)

	* genio.c (scm_getc): Block with scm_internal_select.  (See NEWS.)

	* init.c: Call scm_init_iselect.

	* iselect.h, iselect.c: New files.  Implements
	scm_internal_select.  (See NEWS.)

1997-11-27  Tim Pierce  <twp@skepsis.com>

	Fix a memory leak in scm_read_line and a type cast bug in the ptob.
	* fports.c (scm_fgets): Use malloc/free rather than scm_must_malloc
 	and scm_must_free, since ultimately the	string returned will be copied
 	by scm_makfrom0str anyway.  Also, read any characters that may have
	been pushed onto the port with scm_ungetc.
	* ports.c (scm_generic_fgets): Same as for scm_fgets.
	* ioext.c (scm_read_line): Free string after Guilifying it.
	* ports.h (scm_ptobfuns): fgets method returns a char *, not a char.

1997-11-26  Anthony Green  <green@hoser.cygnus.com>
