@@ -1,3 +1,10 @@
+1997-11-28  Tim Pierce  <twp@skepsis.com>
+
+	* iselect.c: #ifdef USE_THREADS around thread-related includes.
+
+	* dynl-dl.c (sysdep_dynl_func): Check both USCORE and
+	DLSYM_ADDS_USCORE to decide whether to add an underscore.
+
 1997-11-28  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* iselect.c (coop_next_runnable_thread,
